kubernetes/apps/immich/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-and-local-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
  egress:
    - toEntities:
        - host
        - remote-node
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - toEndpoints:
        # OAuth issuer LB IP resolves in-cluster to agentgateway-external, which has its own identity so toFQDNs doesn't match
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            k8s:app.kubernetes.io/name: agentgateway-external
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: auth.rphilipsen.nl
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
